--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -16,7 +16,7 @@
       href="https://storage.googleapis.com/bucket-infjew/INFJEW/backend/images/favicon.jpg"
     />
 
-    <script src="/admin/js/checkLoginStatus.js"></script>
+    <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/backend/js/checkLoginStatus.js"></script>
 
     <!-- Theme Config Js -->
     <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/backend/js/config.js"></script>
@@ -1173,7 +1173,7 @@
                           >
                           <span class="mb-1"
                             >Paul Burgess just purchased â€œMy - Admin
-                            Dashboardâ€?</span
+                            Dashboardï¿½?</span
                           >
                           <p class="mb-0 pb-3">
                             <small class="text-muted">5 minutes ago</small>
@@ -1253,7 +1253,7 @@
                           >
                           <span class="mb-1"
                             >Paul Burgess just purchased â€œMy - Admin
-                            Dashboardâ€?</span
+                            Dashboardï¿½?</span
                           >
                           <p class="mb-0 pb-3">
                             <small class="text-muted">16 hours ago</small>
