--- a/frontend/admin/login.html
+++ b/frontend/admin/login.html
@@ -119,7 +119,7 @@
 
             <div
               id="login-general-msg"
-              class="mt-2"
+              class="mb-2"
               style="color: #f36b21; font-size: 12px; display: none"
             ></div>
 
