--- a/frontend/index.html
+++ b/frontend/index.html
@@ -809,7 +809,8 @@
           <div class="col-md-5 col-12">
             <div class="copyright-area">
               <p class="copyright-line">
-               2025 - <script>
+               2025 -
+              <script>
                 document.write(new Date().getFullYear());
               </script>
               @ INFJEW. All rights reserved.
