--- a/frontend/article-2.html
+++ b/frontend/article-2.html
@@ -12,28 +12,28 @@
   <link rel="icon" href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/favicon.jpg"
     type="image/jpg" />
   <!-- Bootstrap CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Line Awesome CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/line-awesome.min.css" rel="stylesheet" />
+  <link href="/css/line-awesome.min.css" rel="stylesheet" />
   <!-- Animate CSS-->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/animate.css" rel="stylesheet" />
+  <link href="/css/animate.css" rel="stylesheet" />
   <!-- Bar Filler CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/barfiller.css" rel="stylesheet" />
+  <link href="/css/barfiller.css" rel="stylesheet" />
   <!-- Magnific Popup Video -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/magnific-popup.css" rel="stylesheet" />
+  <link href="/css/magnific-popup.css" rel="stylesheet" />
   <!-- Flaticon -->
-  <link rel="stylesheet" href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/flaticon.css" />
+  <link rel="stylesheet" href="/css/flaticon.css" />
   <!-- Owl Carousel CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/owl.carousel.css" rel="stylesheet" />
+  <link href="/css/owl.carousel.css" rel="stylesheet" />
   <!-- Nice Select  -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/nice-select.css" rel="stylesheet" />
+  <link href="/css/nice-select.css" rel="stylesheet" />
   <!-- Style CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/style.css" rel="stylesheet" />
+  <link href="/css/style.css" rel="stylesheet" />
   <!-- Responsive CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/responsive.css" rel="stylesheet" />
+  <link href="/css/responsive.css" rel="stylesheet" />
 
   <!-- jquery -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery-1.12.4.min.js"></script>
+  <script src="/js/jquery-1.12.4.min.js"></script>
 </head>
 
 <body>
@@ -142,15 +142,15 @@
             </div>
             <div class="single-blog-content mb-40">
               <p class="mb-20 single-blog-beginning">
-                Every Stelluna bead is a masterpiece of handcraft ‚Äî shaped,
+                Every Stelluna bead is a masterpiece of handcraft ‚Ä?shaped,
                 polished, and refined through countless hours of careful work.
                 While each one begins as the same natural rattan seed, the art
                 of carving gives rise to a variety of unique shapes, or
-                ‚Äúcuts‚Äù. These differences are not just cosmetic ‚Äî they
+                ‚Äúcuts‚Ä? These differences are not just cosmetic ‚Ä?they
                 represent different aesthetic philosophies and craftsmanship
                 techniques. Whether rounded, minimal, or sculptural, each cut
                 carries the artisan's dedication, emotion, and respect for
-                nature. Stelluna isn't just worn ‚Äî it's collected, cherished,
+                nature. Stelluna isn't just worn ‚Ä?it's collected, cherished,
                 and felt.
               </p>
             </div>
@@ -164,7 +164,7 @@
                   <p class="mb-20">
                     With a well-proportioned, slightly flattened round shape,
                     the Traditional Cut preserves the seed's natural balance.
-                    It feels modest yet complete ‚Äî often chosen by those who
+                    It feels modest yet complete ‚Ä?often chosen by those who
                     appreciate harmony and subtlety.
                   </p>
                   <ul class="mb-20">
@@ -186,13 +186,13 @@
               <div class="row">
                 <div class="col-md-8 col-12">
                   <strong>
-                    Bold and full of energy ‚Äî a symbol of abundance.
+                    Bold and full of energy ‚Ä?a symbol of abundance.
                   </strong>
                   <p class="mb-20">
                     Shaped like a small drum, this style has a sturdy,
                     powerful presence. In Eastern culture, the drum shape is
                     often associated with good fortune, wealth, and prosperity
-                    ‚Äî symbolizing a ‚Äúfull wallet‚Äù and a life of abundance.
+                    ‚Ä?symbolizing a ‚Äúfull wallet‚Ä?and a life of abundance.
                     Because of this, Barrel Cuts are especially loved by those
                     who believe in wearing blessings on the wrist.
                   </p>
@@ -218,7 +218,7 @@
               <div class="row">
                 <div class="col-md-8 col-12">
                   <strong>
-                    Perfectly smooth and harmonious ‚Äî a purist's choice.
+                    Perfectly smooth and harmonious ‚Ä?a purist's choice.
                   </strong>
                   <p class="mb-20">
                     The Round Cut is known for its exquisite symmetry and
@@ -314,7 +314,7 @@
                     visual distinctiveness, what truly sets this cut apart is
                     its incredible handfeel - soft, smooth, and addictively
                     soothing to the touch. Among all Stelluna cuts, it's the
-                    most ‚Äúplayable‚Äù - a favorite for those who love to roll,
+                    most ‚Äúplayable‚Ä?- a favorite for those who love to roll,
                     rub, and hold their beads throughout the day.
                   </p>
                   <ul class="mb-20">
@@ -544,31 +544,31 @@
   <a href="#top" class="go-top"><i class="las la-angle-up"></i></a>
 
   <!-- Popper JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/popper.min.js"></script>
+  <script src="/js/popper.min.js"></script>
   <!-- Bootstrap JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
   <!-- Wow JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/wow.min.js"></script>
+  <script src="/js/wow.min.js"></script>
   <!-- Pure Counter Up JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/pure-counter.js"></script>
+  <script src="/js/pure-counter.js"></script>
   <!-- Owl Carousel JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/owl.carousel.min.js"></script>
+  <script src="/js/owl.carousel.min.js"></script>
   <!-- Magnific Popup JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/magnific-popup.min.js"></script>
+  <script src="/js/magnific-popup.min.js"></script>
   <!-- Isotope JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/isotope-3.0.6-min.js"></script>
+  <script src="/js/isotope-3.0.6-min.js"></script>
   <!-- Countdown JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/simplyCountdown.js"></script>
+  <script src="/js/simplyCountdown.js"></script>
   <!-- Sticky JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.sticky.js"></script>
+  <script src="/js/jquery.sticky.js"></script>
   <!-- Nice Select JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.nice-select.min.js"></script>
+  <script src="/js/jquery.nice-select.min.js"></script>
   <!-- Zoom JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.zoom.min.js"></script>
+  <script src="/js/jquery.zoom.min.js"></script>
   <!-- Progress Bar JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.barfiller.js"></script>
+  <script src="/js/jquery.barfiller.js"></script>
   <!-- Main JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
