--- a/frontend/article-3.html
+++ b/frontend/article-3.html
@@ -14,28 +14,28 @@
   <link rel="icon" href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/favicon.jpg"
     type="image/jpg" />
   <!-- Bootstrap CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Line Awesome CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/line-awesome.min.css" rel="stylesheet" />
+  <link href="/css/line-awesome.min.css" rel="stylesheet" />
   <!-- Animate CSS-->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/animate.css" rel="stylesheet" />
+  <link href="/css/animate.css" rel="stylesheet" />
   <!-- Bar Filler CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/barfiller.css" rel="stylesheet" />
+  <link href="/css/barfiller.css" rel="stylesheet" />
   <!-- Magnific Popup Video -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/magnific-popup.css" rel="stylesheet" />
+  <link href="/css/magnific-popup.css" rel="stylesheet" />
   <!-- Flaticon -->
-  <link rel="stylesheet" href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/flaticon.css" />
+  <link rel="stylesheet" href="/css/flaticon.css" />
   <!-- Owl Carousel CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/owl.carousel.css" rel="stylesheet" />
+  <link href="/css/owl.carousel.css" rel="stylesheet" />
   <!-- Nice Select  -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/nice-select.css" rel="stylesheet" />
+  <link href="/css/nice-select.css" rel="stylesheet" />
   <!-- Style CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/style.css" rel="stylesheet" />
+  <link href="/css/style.css" rel="stylesheet" />
   <!-- Responsive CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/responsive.css" rel="stylesheet" />
+  <link href="/css/responsive.css" rel="stylesheet" />
 
   <!-- jquery -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery-1.12.4.min.js"></script>
+  <script src="/js/jquery-1.12.4.min.js"></script>
 </head>
 
 <body>
@@ -153,7 +153,7 @@
                     stays the same. It breathes with time. Each day you wear
                     it, each moment your skin brushes against it, the bead
                     quietly transforms. From a soft ivory white to a warm
-                    golden hue, and eventually to a deep, glowing amber â€”
+                    golden hue, and eventually to a deep, glowing amber â€?
                     Stelluna records the passage of time not by fading, but by
                     becoming richer. It's not just a bracelet or necklace.
                     It's a companion.
@@ -164,7 +164,7 @@
 
                   <p class="mb-20">
                     When you first receive a Stelluna bracelet or necklace,
-                    the beads are typically smooth and light in color â€” a soft
+                    the beads are typically smooth and light in color â€?a soft
                     creamy white dotted with subtle star specks. This is the
                     seed in its purest form, freshly cut and polished,
                     untouched by the outside world.
@@ -177,7 +177,7 @@
                     soft golden glow. With continued wear and care, that gold
                     deepens into a rich amber-brown, like aged wood or
                     polished stone. The surface may become glossier, more
-                    translucent, more soulful â€” carrying with it the story of
+                    translucent, more soulful â€?carrying with it the story of
                     where it's been and who it's been with.
                   </p>
                   <p class="mb-20">
@@ -203,14 +203,14 @@
               <h2>Why Aging Matters</h2>
               <p class="mb-20">
                 In many cultures, especially in the East, in China, this
-                transformation is called "å…»" â€” the process of nurturing and
+                transformation is called "å…? â€?the process of nurturing and
                 cultivating your beads. It reflects not just the physical
                 changes, but also a deepening of the emotional bond. The more
                 time you spend with your Stelluna, the more it reflects you:
                 your habits, your energy, your life.
               </p>
               <p class="mb-20">
-                This slow evolution is not a flaw â€” it's the feature. Instead
+                This slow evolution is not a flaw â€?it's the feature. Instead
                 of losing value with time, Stelluna becomes more meaningful.
               </p>
             </div>
@@ -245,7 +245,7 @@
                     </li>
                   </ul>
                   <p class="mb-40">
-                    The more you care for it, the more it will reward you â€”
+                    The more you care for it, the more it will reward you â€?
                     not just with beauty, but with presence.
                   </p>
                 </div>
@@ -255,7 +255,7 @@
             <div class="single-blog-content mb-40">
               <h2>Final Thoughts</h2>
               <p class="mb-20">
-                Stelluna isn't just something you buy â€” it's something you
+                Stelluna isn't just something you buy â€?it's something you
                 grow with. In a world where everything changes so fast, these
                 beads remind us that some things are better with time. Let it
                 stay with you. Let it change with you. Let it become a quiet
@@ -403,31 +403,31 @@
   <a href="#top" class="go-top"><i class="las la-angle-up"></i></a>
 
   <!-- Popper JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/popper.min.js"></script>
+  <script src="/js/popper.min.js"></script>
   <!-- Bootstrap JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
   <!-- Wow JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/wow.min.js"></script>
+  <script src="/js/wow.min.js"></script>
   <!-- Pure Counter Up JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/pure-counter.js"></script>
+  <script src="/js/pure-counter.js"></script>
   <!-- Owl Carousel JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/owl.carousel.min.js"></script>
+  <script src="/js/owl.carousel.min.js"></script>
   <!-- Magnific Popup JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/magnific-popup.min.js"></script>
+  <script src="/js/magnific-popup.min.js"></script>
   <!-- Isotope JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/isotope-3.0.6-min.js"></script>
+  <script src="/js/isotope-3.0.6-min.js"></script>
   <!-- Countdown JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/simplyCountdown.js"></script>
+  <script src="/js/simplyCountdown.js"></script>
   <!-- Sticky JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.sticky.js"></script>
+  <script src="/js/jquery.sticky.js"></script>
   <!-- Nice Select JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.nice-select.min.js"></script>
+  <script src="/js/jquery.nice-select.min.js"></script>
   <!-- Zoom JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.zoom.min.js"></script>
+  <script src="/js/jquery.zoom.min.js"></script>
   <!-- Progress Bar JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.barfiller.js"></script>
+  <script src="/js/jquery.barfiller.js"></script>
   <!-- Main JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
