--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -12,32 +12,32 @@
   <link rel="icon" href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/favicon.jpg"
     type="image/jpg" />
   <!-- Bootstrap CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Line Awesome CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/line-awesome.min.css" rel="stylesheet" />
+  <link href="/css/line-awesome.min.css" rel="stylesheet" />
   <!-- Animate CSS-->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/animate.css" rel="stylesheet" />
+  <link href="/css/animate.css" rel="stylesheet" />
   <!-- Bar Filler CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/barfiller.css" rel="stylesheet" />
+  <link href="/css/barfiller.css" rel="stylesheet" />
   <!-- Magnific Popup Video -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/magnific-popup.css" rel="stylesheet" />
+  <link href="/css/magnific-popup.css" rel="stylesheet" />
   <!-- Flaticon -->
-  <link rel="stylesheet" href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/flaticon.css" />
+  <link rel="stylesheet" href="/css/flaticon.css" />
   <!-- Owl Carousel CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/owl.carousel.css" rel="stylesheet" />
+  <link href="/css/owl.carousel.css" rel="stylesheet" />
   <!-- Nice Select  -->
   <!-- <link href="css/nice-select.css" rel="stylesheet" /> -->
   <!-- Slick Slider -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/slick.css" rel="stylesheet" />
+  <link href="/css/slick.css" rel="stylesheet" />
   <!-- NoUi Slider  -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/nouislider.css" rel="stylesheet" />
+  <link href="/css/nouislider.css" rel="stylesheet" />
   <!-- Style CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/style.css" rel="stylesheet" />
+  <link href="/css/style.css" rel="stylesheet" />
   <!-- Responsive CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/responsive.css" rel="stylesheet" />
+  <link href="/css/responsive.css" rel="stylesheet" />
 
   <!-- jquery -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery-1.12.4.min.js"></script>
+  <script src="/js/jquery-1.12.4.min.js"></script>
 </head>
 
 <body>
@@ -300,38 +300,38 @@
   <a href="#top" class="go-top"><i class="las la-angle-up"></i></a>
 
   <!-- Popper JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/popper.min.js"></script>
+  <script src="/js/popper.min.js"></script>
   <!-- Bootstrap JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
   <!-- Wow JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/wow.min.js"></script>
+  <script src="/js/wow.min.js"></script>
   <!-- Pure Counter Up JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/pure-counter.js"></script>
+  <script src="/js/pure-counter.js"></script>
   <!-- Owl Carousel JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/owl.carousel.min.js"></script>
+  <script src="/js/owl.carousel.min.js"></script>
   <!-- Magnific Popup JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/magnific-popup.min.js"></script>
+  <script src="/js/magnific-popup.min.js"></script>
   <!-- Isotope JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/isotope-3.0.6-min.js"></script>
+  <script src="/js/isotope-3.0.6-min.js"></script>
   <!-- Countdown JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/simplyCountdown.js"></script>
+  <script src="/js/simplyCountdown.js"></script>
   <!-- Slick Slider JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/slick.min.js"></script>
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/slick.js"></script>
+  <script src="/js/slick.min.js"></script>
+  <script src="/js/slick.js"></script>
   <!-- Nice Select  -->
   <!-- <script src="js/jquery.nice-select.min.js"></script> -->
   <!-- Zoom JS  -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.zoom.min.js"></script>
+  <script src="/js/jquery.zoom.min.js"></script>
   <!-- Sticky JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.sticky.js"></script>
+  <script src="/js/jquery.sticky.js"></script>
   <!-- NoUi Slider -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/nouislider.js"></script>
+  <script src="/js/nouislider.js"></script>
   <!-- Progress Bar JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.barfiller.js"></script>
+  <script src="/js/jquery.barfiller.js"></script>
   <!-- recaptcha -->
   <script src="https://www.google.com/recaptcha/api.js"></script>
   <!-- Main JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
