--- a/frontend/article-1.html
+++ b/frontend/article-1.html
@@ -14,28 +14,28 @@
   <link rel="icon" href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/favicon.jpg"
     type="image/jpg" />
   <!-- Bootstrap CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Line Awesome CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/line-awesome.min.css" rel="stylesheet" />
+  <link href="/css/line-awesome.min.css" rel="stylesheet" />
   <!-- Animate CSS-->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/animate.css" rel="stylesheet" />
+  <link href="/css/animate.css" rel="stylesheet" />
   <!-- Bar Filler CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/barfiller.css" rel="stylesheet" />
+  <link href="/css/barfiller.css" rel="stylesheet" />
   <!-- Magnific Popup Video -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/magnific-popup.css" rel="stylesheet" />
+  <link href="/css/magnific-popup.css" rel="stylesheet" />
   <!-- Flaticon -->
-  <link rel="stylesheet" href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/flaticon.css" />
+  <link rel="stylesheet" href="/css/flaticon.css" />
   <!-- Owl Carousel CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/owl.carousel.css" rel="stylesheet" />
+  <link href="/css/owl.carousel.css" rel="stylesheet" />
   <!-- Nice Select  -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/nice-select.css" rel="stylesheet" />
+  <link href="/css/nice-select.css" rel="stylesheet" />
   <!-- Style CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/style.css" rel="stylesheet" />
+  <link href="/css/style.css" rel="stylesheet" />
   <!-- Responsive CSS -->
-  <link href="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/css/responsive.css" rel="stylesheet" />
+  <link href="/css/responsive.css" rel="stylesheet" />
 
   <!-- jquery -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery-1.12.4.min.js"></script>
+  <script src="/js/jquery-1.12.4.min.js"></script>
 </head>
 
 <body>
@@ -151,7 +151,7 @@
                     Stelluna Bodhi bead, is a natural seed used to create
                     spiritual and decorative bracelets and necklaces. With its
                     calming appearance and deep cultural roots, Stelluna is
-                    not just jewelry â€” it's a symbol of nature's beauty,
+                    not just jewelry â€?it's a symbol of nature's beauty,
                     spiritual connection, and artisan tradition.
                   </p>
                   <br />
@@ -160,7 +160,7 @@
 
                   <p class="mb-20">
                     Stelluna originates from the fruit of the rattan palm tree
-                    â€” a climbing plant in the Arecaceae (palm) family,
+                    â€?a climbing plant in the Arecaceae (palm) family,
                     commonly found in tropical and subtropical regions of
                     Asia. The fruit is called rattan fruit, and it holds the
                     raw seed that becomes Stelluna after careful processing.
@@ -188,7 +188,7 @@
               <h2>From Raw Seed to Stelluna Bead</h2>
               <p class="mb-20">
                 The transformation from raw rattan seed to smooth, elegant
-                Stelluna bead involves careful handcrafting â€” sanding,
+                Stelluna bead involves careful handcrafting â€?sanding,
                 shaping, and polishing each piece by hand. No two beads are
                 exactly alike, and each carries its own subtle pattern and
                 texture gifted by nature itself.
@@ -204,7 +204,7 @@
               <p class="mb-20">
                 The outer skin of the rattan fruit has a scale-like texture,
                 similar to a snake fruit (salak). Inside, the structure is
-                somewhat like a longan â€” a large seed surrounded by thin,
+                somewhat like a longan â€?a large seed surrounded by thin,
                 astringent flesh. Though technically edible, the fruit is not
                 commonly eaten due to its strong, bitter taste.
               </p>
@@ -219,7 +219,7 @@
                 harvested, these seeds are picked, dried, polished, and
                 hand-shaped into the iconic beads. The natural contrast of
                 creamy surfaces dotted with dark spots gives rise to the name
-                "Star-and-Moon" â€” the bud points with the blanks around
+                "Star-and-Moon" â€?the bud points with the blanks around
                 representing moon and the dots representing the stars.
               </p>
             </div>
@@ -228,7 +228,7 @@
               <p class="mb-20">
                 Worn for spiritual meditation, fashion, or cultural
                 appreciation, Stelluna bracelets and necklaces offer a
-                connection â€” not just to nature, but to something deeper. Over
+                connection â€?not just to nature, but to something deeper. Over
                 time, the beads change color, developing a warm amber tone and
                 reflecting the life and energy of the person who wears them.
               </p>
@@ -379,31 +379,31 @@
   <a href="#top" class="go-top"><i class="las la-angle-up"></i></a>
 
   <!-- Popper JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/popper.min.js"></script>
+  <script src="/js/popper.min.js"></script>
   <!-- Bootstrap JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
   <!-- Wow JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/wow.min.js"></script>
+  <script src="/js/wow.min.js"></script>
   <!-- Pure Counter Up JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/pure-counter.js"></script>
+  <script src="/js/pure-counter.js"></script>
   <!-- Owl Carousel JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/owl.carousel.min.js"></script>
+  <script src="/js/owl.carousel.min.js"></script>
   <!-- Magnific Popup JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/magnific-popup.min.js"></script>
+  <script src="/js/magnific-popup.min.js"></script>
   <!-- Isotope JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/isotope-3.0.6-min.js"></script>
+  <script src="/js/isotope-3.0.6-min.js"></script>
   <!-- Countdown JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/simplyCountdown.js"></script>
+  <script src="/js/simplyCountdown.js"></script>
   <!-- Sticky JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.sticky.js"></script>
+  <script src="/js/jquery.sticky.js"></script>
   <!-- Nice Select JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.nice-select.min.js"></script>
+  <script src="/js/jquery.nice-select.min.js"></script>
   <!-- Zoom JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.zoom.min.js"></script>
+  <script src="/js/jquery.zoom.min.js"></script>
   <!-- Progress Bar JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/jquery.barfiller.js"></script>
+  <script src="/js/jquery.barfiller.js"></script>
   <!-- Main JS -->
-  <script src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
