--- a/frontend/admin/login.html
+++ b/frontend/admin/login.html
@@ -26,18 +26,18 @@
     </script>
 
     <!-- Theme Config Js -->
-    <script src="/admin/js/config.js"></script>
+    <script src="/js/config.js"></script>
 
     <!-- Vendor css -->
     <link
-      href="/admin/css/vendor.min.css"
+      href="/css/vendor.min.css"
       rel="stylesheet"
       type="text/css"
     />
 
     <!-- App css -->
     <link
-      href="/admin/css/app.css"
+      href="/css/app.css"
       rel="stylesheet"
       type="text/css"
       id="app-style"
@@ -45,7 +45,7 @@
 
     <!-- Icons css -->
     <link
-      href="/admin/css/icons.min.css"
+      href="/css/icons.min.css"
       rel="stylesheet"
       type="text/css"
     />
@@ -136,12 +136,12 @@
     </div>
 
     <!-- Vendor js -->
-    <script src="/admin/js/vendor.min.js"></script>
+    <script src="/js/vendor.min.js"></script>
 
     <!-- App js -->
-    <script src="/admin/js/app.js"></script>
+    <script src="/js/app.js"></script>
 
-    <script src="/admin/js/BackendHttpRequest.js"></script>
+    <script src="/js/BackendHttpRequest.js"></script>
 
     <script>
       (function () {
