--- a/frontend/admin/precious-list.html
+++ b/frontend/admin/precious-list.html
@@ -19,24 +19,24 @@
     
 
     <!-- Theme Config Js -->
-    <script src="/admin/js/config.js"></script>
+    <script src="/js/config.js"></script>
 
     <!-- gridjs css -->
     <link
       rel="stylesheet"
-      href="/admin/vendor/gridjs/theme/mermaid.min.css"
+      href="/vendor/gridjs/theme/mermaid.min.css"
     />
 
     <!-- Vendor css -->
     <link
-      href="/admin/css/vendor.min.css"
+      href="/css/vendor.min.css"
       rel="stylesheet"
       type="text/css"
     />
 
     <!-- App css -->
     <link
-      href="/admin/css/app.css"
+      href="/css/app.css"
       rel="stylesheet"
       type="text/css"
       id="app-style"
@@ -44,14 +44,14 @@
 
     <!-- Icons css -->
     <link
-      href="/admin/css/icons.min.css"
+      href="/css/icons.min.css"
       rel="stylesheet"
       type="text/css"
     />
 
     <!-- Sweet Alert css-->
     <link
-      href="/admin/vendor/sweetalert2/sweetalert2.min.css"
+      href="/vendor/sweetalert2/sweetalert2.min.css"
       rel="stylesheet"
       type="text/css"
     />
@@ -896,23 +896,23 @@
     <!-- END wrapper -->
 
     <!-- Vendor js -->
-    <script src="/admin/js/vendor.min.js"></script>
+    <script src="/js/vendor.min.js"></script>
 
     <!-- App js -->
-    <script src="/admin/js/app.js"></script>
+    <script src="/js/app.js"></script>
 
     <!-- Sweet Alerts js -->
-    <script src="/admin/vendor/sweetalert2/sweetalert2.min.js"></script>
+    <script src="/vendor/sweetalert2/sweetalert2.min.js"></script>
 
     <!-- gridjs js -->
-    <script src="/admin/vendor/gridjs/gridjs.umd.js"></script>
+    <script src="/vendor/gridjs/gridjs.umd.js"></script>
 
     <!-- Sweet alert demo js-->
-    <script src="/admin/js/pages/extended-sweetalerts.js"></script>
+    <script src="/js/pages/extended-sweetalerts.js"></script>
 
-    <script src="/admin/js/pages/precious-list.js"></script>
+    <script src="/js/pages/precious-list.js"></script>
 
-    <script src="/admin/js/BackendHttpRequest.js"></script>
+    <script src="/js/BackendHttpRequest.js"></script>
       <script>
       (function () {
         var logoutBtn = document.getElementById("logout-btn");
