--- a/frontend/admin/precious-section.html
+++ b/frontend/admin/precious-section.html
@@ -19,18 +19,18 @@
     
 
     <!-- Theme Config Js -->
-    <script src="/admin/js/config.js"></script>
+    <script src="/js/config.js"></script>
 
     <!-- Vendor css -->
     <link
-      href="/admin/css/vendor.min.css"
+      href="/css/vendor.min.css"
       rel="stylesheet"
       type="text/css"
     />
 
     <!-- App css -->
     <link
-      href="/admin/css/app.css"
+      href="/css/app.css"
       rel="stylesheet"
       type="text/css"
       id="app-style"
@@ -38,7 +38,7 @@
 
     <!-- Icons css -->
     <link
-      href="/admin/css/icons.min.css"
+      href="/css/icons.min.css"
       rel="stylesheet"
       type="text/css"
     />
@@ -804,14 +804,14 @@
     <!-- END wrapper -->
 
     <!-- Vendor js -->
-    <script src="/admin/js/vendor.min.js"></script>
+    <script src="/js/vendor.min.js"></script>
 
     <!-- App js -->
-    <script src="/admin/js/app.js"></script>
+    <script src="/js/app.js"></script>
 
-    <script src="/admin/js/pages/precious-section.js"></script>
+    <script src="/js/pages/precious-section.js"></script>
 
-    <script src="/admin/js/BackendHttpRequest.js"></script>
+    <script src="/js/BackendHttpRequest.js"></script>
       <script>
       (function () {
         var logoutBtn = document.getElementById("logout-btn");
