--- a/frontend/admin/precious-list.html
+++ b/frontend/admin/precious-list.html
@@ -130,6 +130,13 @@
                 </ul>
               </div>
             </li>
+
+            <li class="side-nav-item">
+              <a href="/user" class="side-nav-link">
+                <span class="menu-icon"><i class="ti ti-user"></i></span>
+                <span class="menu-text"> User </span>
+              </a>
+            </li>
           </ul>
 
           <div class="clearfix"></div>
