--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -117,6 +117,13 @@
                 </ul>
               </div>
             </li>
+
+            <li class="side-nav-item">
+              <a href="/user" class="side-nav-link">
+                <span class="menu-icon"><i class="ti ti-user"></i></span>
+                <span class="menu-text"> User </span>
+              </a>
+            </li>
           </ul>
 
           <div class="clearfix"></div>
@@ -1173,7 +1180,7 @@
                           >
                           <span class="mb-1"
                             >Paul Burgess just purchased â€œMy - Admin
-                            Dashboardï¿?</span
+                            Dashboardï¿½?</span
                           >
                           <p class="mb-0 pb-3">
                             <small class="text-muted">5 minutes ago</small>
@@ -1253,7 +1260,7 @@
                           >
                           <span class="mb-1"
                             >Paul Burgess just purchased â€œMy - Admin
-                            Dashboardï¿?</span
+                            Dashboardï¿½?</span
                           >
                           <p class="mb-0 pb-3">
                             <small class="text-muted">16 hours ago</small>
