--- a/frontend/admin/precious-section.html
+++ b/frontend/admin/precious-section.html
@@ -77,7 +77,7 @@
 
         <div data-simplebar>
           <!--- Sidenav Menu -->
-          <ul class="side-nav">
+           <ul class="side-nav">
             <li class="side-nav-item">
               <a href="/index" class="side-nav-link">
                 <span class="menu-icon"><i class="ti ti-dashboard"></i></span>
@@ -116,6 +116,13 @@
                   </li>
                 </ul>
               </div>
+            </li>
+
+            <li class="side-nav-item">
+              <a href="/user" class="side-nav-link">
+                <span class="menu-icon"><i class="ti ti-user"></i></span>
+                <span class="menu-text"> User </span>
+              </a>
             </li>
           </ul>
 
