--- a/frontend/index.html
+++ b/frontend/index.html
@@ -113,7 +113,7 @@
   <div class="hero-area hero-area-two">
     <div class="container">
       <div class="hero-area-slider owl-carousel" id="banner-carousel">
-        <!-- JS ä¼šåŠ¨æ€æ’å…?banner slide -->
+        <!-- JS ä¼šåŠ¨æ€æ’ï¿½?banner slide -->
       </div>
     </div>
   </div>
@@ -324,7 +324,7 @@
                     </div>
                     <div class="top-prod-content">
                       <h5 class="top-product-title">
-                        Premium Pure Essence â€?Starless<span>Stelluna Bracelet</span>
+                        Premium Pure Essence ï¿½?Starless<span>Stelluna Bracelet</span>
                       </h5>
                       <div class="product-rating">
                         <i class="las la-star"></i>
@@ -415,7 +415,7 @@
                     </div>
                     <div class="top-prod-content">
                       <h5 class="top-product-title">
-                        Premium Pure Essence â€?Starless<span>Stelluna Bracelet</span>
+                        Premium Pure Essence ï¿½?Starless<span>Stelluna Bracelet</span>
                       </h5>
                       <div class="product-rating">
                         <i class="las la-star"></i>
@@ -668,7 +668,7 @@
               </div>
               <div class="testimonial-content">
                 <p>
-                  "I wear it almost every day â€?it's stylish, subtle, and
+                  "I wear it almost every day ï¿½?it's stylish, subtle, and
                   gives off this quiet elegance. Feels like I'm wearing a part
                   of something ancient and sacred."
                 </p>
@@ -718,7 +718,7 @@
               </div>
               <div class="testimonial-content">
                 <p>
-                  "Absolutely love it. There's a mysterious energy to it â€?
+                  "Absolutely love it. There's a mysterious energy to it ï¿½?
                   like something from the East, natural and spiritual. Knowing
                   it's handmade makes it even more special."
                 </p>
@@ -744,7 +744,7 @@
               <div class="testimonial-content">
                 <p>
                   "A perfect blend of culture and craftsmanship. The Stelluna
-                  beads change over time â€?it's like it grows with you. That's
+                  beads change over time ï¿½?it's like it grows with you. That's
                   rare."
                 </p>
               </div>
@@ -856,7 +856,7 @@
   <!-- Progress Bar JS -->
   <script src="/js/jquery.barfiller.js"></script>
 
-  <script src="/js/FrontendHttpRequest.js?v=11"></script>
+  <script src="/js/FrontendHTTPRequest.js?v=11"></script>
 
   <!-- Main JS -->
   <script src="/js/main.js?v=2"></script>
