--- a/frontend/admin/user.html
+++ b/frontend/admin/user.html
@@ -235,7 +235,7 @@
                       class="btn btn-primary"
                       data-bs-toggle="modal"
                       data-bs-target="#AddPreciousModal"
-                      ><i class="ti ti-plus me-1"></i>Add Precious</a
+                      ><i class="ti ti-plus me-1"></i>Add User</a
                     >
                   </div>
 
