--- a/frontend/admin/user.html
+++ b/frontend/admin/user.html
@@ -347,7 +347,57 @@
 
               <div class="card-body">
                 <div id="table-gridjs"></div>
-          
+                <!-- Modal -->
+                <div class="modal fade" id="ResetPasswordModal" data-bs-backdrop="static" data-bs-keyboard="false"
+                  tabindex="-1" aria-labelledby="ResetPasswordModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header text-bg-warning border-0">
+                        <h5 class="modal-title" id="ResetPasswordModalLabel">
+                          Reset Password
+                        </h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                          aria-label="Close"></button>
+                      </div>
+                      <!-- end modal header -->
+
+                      <div class="modal-body">
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <div class="mb-3">
+                              <label for="reset-password" class="form-label">New Password</label>
+                              <input type="password" class="form-control" id="reset-password"
+                                placeholder="Enter new password" />
+                            </div>
+                          </div>
+                          <div class="col-lg-12">
+                            <div class="mb-3">
+                              <label for="reset-password-confirm" class="form-label">Repeat New Password</label>
+                              <input type="password" class="form-control" id="reset-password-confirm"
+                                placeholder="Repeat new password" />
+                            </div>
+                          </div>
+                          <div class="col-lg-12">
+                            <div id="reset-password-msg" class="mt-1"
+                              style="color: #f36b21; font-size: 12px; display: none"></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-light" data-bs-dismiss="modal">
+                          Close
+                        </button>
+                        <button type="button" class="btn btn-warning" id="reset-password-btn">
+                          Update Password
+                        </button>
+                      </div>
+                      <!-- end modal footer -->
+                    </div>
+                    <!-- end modal content-->
+                  </div>
+                  <!-- end modal dialog-->
+                </div>
+                <!-- end modal-->
               </div>
               <!-- end card-body -->
             </div>
